--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,8 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' />
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
 
     <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
@@ -117,6 +119,10 @@ window.onload = function () {
   </head>
   <body>
     <% include header.ejs %>
+    <div class="testdiv" style="margin-top:2em;justify-content: flex-end;">
+    <div style="margin:.370em;float:left;" ><i class="fa fa-exclamation-triangle" aria-hidden="true"></i>You have actions you need to take!<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>&nbsp;|</div>
+    <p style="margin:.5em">Total Loan Balance:<%= data['LOAN']['ffel_com'] %> &nbsp;|&nbsp;<i style="color:#369EAD" class="fa fa-question-circle" aria-hidden="true"></i>&nbsp;EFC:<%= data['USER']['efc'] %>&nbsp;|&nbsp;Loged in: Brock Erickson</p> 
+    </div>
     <hr id="top">
     <% include myLoans.ejs %>
     <hr>
