--- a/views/myPersonalInfo.ejs
+++ b/views/myPersonalInfo.ejs
@@ -1,4 +1,5 @@
 
+<h1 style="text-align:center">Personal Info</h1>
 <div class="columndiv" id="myPersonalInfo">
     <span>
         <div class="testdiv" >
