--- a/views/myBudget.ejs
+++ b/views/myBudget.ejs
@@ -103,7 +103,7 @@
 					<option value="Education">Education</option>
 				</select>
 			</p>
-			<p>Average salary of this major: <span id="salary"></span></p>
+			<p>Average salary of this major: $<span id="salary"></span></p>
 			<p>Payment*: <input id="payment" type="number" name="payment" onchange="calculateInterest()" value="5" ="0" max="100"/></p>
 			<p>*percentage of average monthly income based on major that is paid to loan</p>
 		</form>
