--- a/views/myActionables.ejs
+++ b/views/myActionables.ejs
@@ -9,7 +9,7 @@
     justify-content: space-around;
 	text-align: center;
 	font-weight:bold;
-	">
+	margin-top:4em">
         <h1><i class="fa fa-exclamation-triangle" aria-hidden="true"></i>&nbsp;Alerts&nbsp;<i class="fa fa-exclamation-triangle" aria-hidden="true"></i></h1><br/>
 		<p>1) Please review your email (Line 13) and make sure it is up to date</p>
 		<p>2) Please review your phone number (Line 10) and make sure it is up to date</p>
