--- a/views/header.ejs
+++ b/views/header.ejs
@@ -21,4 +21,23 @@
                 <li><img alt="Link to Fafsa" src="images/fafsalogo.jpg" href="https://studentaid.ed.gov/sa/" style="height:4em"/></li>
             </ul>
         </div>
+    <div class="testdiv" style="z-index:9;margin:auto;width:92%" >
+        <div class="row">
+            <div class="col-sm-3" style="text-align: center;">
+                <div style="float:left;" >
+                    <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+                    You have actions you need to take!
+                </div>
+            </div>
+            <div class="col-sm-3" style="text-align: center;">
+                Total Loan Balance: <%= data['LOAN']['ffel_com'] %>
+            </div>
+            <div class="col-sm-3" style="text-align: center;">
+                EFC: <%= data['USER']['efc'] %><i style="color:#369EAD" class="fa fa-question-circle" aria-hidden="true"></i>
+            </div>
+            <div class="col-sm-3" style="text-align: center;">
+                Logged in: Brock Erickson
+            </div>
+        </div>
+    </div>
 </nav>
