--- a/views/myLoans.ejs
+++ b/views/myLoans.ejs
@@ -99,8 +99,8 @@ window.onload = function () {
             showInLegend: true,
             toolTipContent: "{y} - <strong>#percent%</strong>",
             dataPoints: [
-                {  y: parseInt(data['LOAN']['ffel_sub_n']), legendText:"Subsidized (No Intrest now)"},
-                {  y: parseInt(data['LOAN']['ffel_unsub_n']), legendText:"Unsubsidized (Intrest now)"},
+                {  y: parseInt(data['LOAN']['ffel_sub_n']), legendText:"Subsidized (No Interest now)"},
+                {  y: parseInt(data['LOAN']['ffel_unsub_n']), legendText:"Unsubsidized (Interest now)"},
             ]
         }
         ]
