--- a/views/header.ejs
+++ b/views/header.ejs
@@ -21,7 +21,7 @@
                 <li><img alt="Link to Fafsa" src="images/fafsalogo.jpg" href="https://studentaid.ed.gov/sa/" style="height:4em"/></li>
             </ul>
         </div>
-    <div class="testdiv" style="z-index:9;margin:auto;width:92%" >
+    <!--div class="testdiv" style="z-index:9;margin:auto;width:92%" >
         <div class="row">
             <div class="col-sm-3" style="text-align: center;">
                 <div style="float:left;" >
@@ -38,6 +38,6 @@
             <div class="col-sm-3" style="text-align: center;">
                 Logged in: Brock Erickson
             </div>
-        </div>
+        </div-->
     </div>
 </nav>
